--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
   },
   "homepage": "https://github.com/valentinefleith/advent-of-code-2025#readme",
   "devDependencies": {
+    "@types/lodash": "^4.17.21",
     "@types/node": "^24.10.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
