--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   },
   "homepage": "https://github.com/valentinefleith/advent-of-code-2025#readme",
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@types/lodash": "^4.17.21",
     "@types/node": "^24.10.1",
+    "eslint": "^9.39.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.48.1"
   },
   "dependencies": {
     "lodash": "^4.17.21"
